; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/src/wps/extr_wps_upnp_event.c_event_delete.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/src/wps/extr_wps_upnp_event.c_event_delete.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wps_event_ = type { i32 }

@MSG_DEBUG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [26 x i8] c"WPS UPnP: Delete event %p\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.wps_event_*)* @event_delete to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @event_delete(%struct.wps_event_* %0) #0 {
  %2 = alloca %struct.wps_event_*, align 8
  store %struct.wps_event_* %0, %struct.wps_event_** %2, align 8
  %3 = load i32, i32* @MSG_DEBUG, align 4
  %4 = load %struct.wps_event_*, %struct.wps_event_** %2, align 8
  %5 = call i32 @wpa_printf(i32 %3, i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0), %struct.wps_event_* %4)
  %6 = load %struct.wps_event_*, %struct.wps_event_** %2, align 8
  %7 = call i32 @event_clean(%struct.wps_event_* %6)
  %8 = load %struct.wps_event_*, %struct.wps_event_** %2, align 8
  %9 = getelementptr inbounds %struct.wps_event_, %struct.wps_event_* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @wpabuf_free(i32 %10)
  %12 = load %struct.wps_event_*, %struct.wps_event_** %2, align 8
  %13 = call i32 @os_free(%struct.wps_event_* %12)
  ret void
}

declare dso_local i32 @wpa_printf(i32, i8*, %struct.wps_event_*) #1

declare dso_local i32 @event_clean(%struct.wps_event_*) #1

declare dso_local i32 @wpabuf_free(i32) #1

declare dso_local i32 @os_free(%struct.wps_event_*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
